# tcc

./: .gitignore  parameters.py  requirements.txt
experiments/centralized/: main.py  process_results.py
experiments/fedavg/: fedavg_simulation.py  process_results.py
experiments/fedavg+clusterization/: fedavg+clusterization_simulation.py  process_results.py
experiments/fedavg+interpolation/: fedavg+interpolation_simulation.py  process_results.py
experiments/federated/: fedavg.py  fedavg_server.py  fedavg_simulation.py
experiments/fedper/: fedper_simulation.py  process_results.py
experiments/fedper+interpolation.py/: fedper+interpolation_simulation.py  process_results.py
flwr/flwr-clusterization/: pyproject.toml
flwr/flwr-clusterization/flwr_clusterization/: __init__.py  client_app.py  server_app.py  strategy.py
flwr/flwr-fedavg/: README.md  pyproject.toml
flwr/flwr-fedavg/flwr_fedavg/: client_app.py  server_app.py  task.py
helpers/: load_data.py  numpy_serializer.py
models/: bilstm.py  mobile_net.py
processed_results/centralized/20250209_132322/: processed_history.csv
processed_results/centralized/20250209_134853/: processed_history.csv
processed_results/fedavg+interpolation/20250209_162414/: processed_history.csv
processed_results/fedavg+interpolation/20250209_162619/: processed_history.csv
processed_results/fedavg/20250209_145533/: processed_history.csv
processed_results/fedavg/20250209_153538/: processed_history.csv
results/centralized/20250209_132322/: history.csv  results.csv
results/centralized/20250209_132322/sample/: expected_output.json  input.json  output.json
results/centralized/20250209_134853/: history.csv  results.csv
results/centralized/20250209_134853/sample/: expected_output.json  input.json  output.json
results/fedavg+interpolation/20250209_162414/: history.csv
results/fedavg+interpolation/20250209_162414/client_0/sample/: output_round_10.json
results/fedavg+interpolation/20250209_162414/client_1/sample/: output_round_10.json
results/fedavg+interpolation/20250209_162619/: history.csv
results/fedavg/20250209_145533/: history.csv
results/fedavg/20250209_153538/: history.csv
(+61 files in other folders)
